src/parser/snapshots/crochet__parser__tests__destructuring-2.snap
---
source: src/parser/mod.rs
expression: "parse(\"let {a, b, ...rest} = letters\")"
---
Program {
    body: [
        VarDecl {
            span: 0..29,
            comments: None,
            pattern: Object(
                ObjectPat {
                    span: 4..20,
                    props: [
                        Assign(
                            AssignPatProp {
                                span: 5..6,
                                key: Ident {
                                    span: 5..6,
                                    name: "a",
                                },
                                value: None,
                            },
                        ),
                        Assign(
                            AssignPatProp {
                                span: 8..9,
                                key: Ident {
                                    span: 8..9,
                                    name: "b",
                                },
                                value: None,
                            },
                        ),
                        Rest(
                            RestPat {
                                span: 11..18,
                                arg: Ident(
                                    BindingIdent {
                                        span: 14..18,
                                        id: Ident {
                                            span: 14..18,
                                            name: "rest",
                                        },
                                        type_ann: None,
                                    },
                                ),
                                type_ann: None,
                            },
                        ),
                    ],
                    optional: false,
                    type_ann: None,
                },
            ),
            init: Some(
                Ident(
                    Ident {
                        span: 22..29,
                        name: "letters",
                    },
                ),
            ),
            declare: false,
        },
    ],
}
