src/parser/snapshots/crochet__parser__tests__destructuring-3.snap
---
source: src/parser/mod.rs
expression: "parse(\"let {p0: {x, y}, p1: {x, y}} = line\")"
---
Program {
    body: [
        VarDecl {
            span: 0..35,
            comments: None,
            pattern: Object(
                ObjectPat {
                    span: 4..29,
                    props: [
                        KeyValue(
                            KeyValuePatProp {
                                key: Ident {
                                    span: 5..7,
                                    name: "p0",
                                },
                                value: Object(
                                    ObjectPat {
                                        span: 9..15,
                                        props: [
                                            Assign(
                                                AssignPatProp {
                                                    span: 10..11,
                                                    key: Ident {
                                                        span: 10..11,
                                                        name: "x",
                                                    },
                                                    value: None,
                                                },
                                            ),
                                            Assign(
                                                AssignPatProp {
                                                    span: 13..14,
                                                    key: Ident {
                                                        span: 13..14,
                                                        name: "y",
                                                    },
                                                    value: None,
                                                },
                                            ),
                                        ],
                                        optional: false,
                                        type_ann: None,
                                    },
                                ),
                            },
                        ),
                        KeyValue(
                            KeyValuePatProp {
                                key: Ident {
                                    span: 17..19,
                                    name: "p1",
                                },
                                value: Object(
                                    ObjectPat {
                                        span: 21..27,
                                        props: [
                                            Assign(
                                                AssignPatProp {
                                                    span: 22..23,
                                                    key: Ident {
                                                        span: 22..23,
                                                        name: "x",
                                                    },
                                                    value: None,
                                                },
                                            ),
                                            Assign(
                                                AssignPatProp {
                                                    span: 25..26,
                                                    key: Ident {
                                                        span: 25..26,
                                                        name: "y",
                                                    },
                                                    value: None,
                                                },
                                            ),
                                        ],
                                        optional: false,
                                        type_ann: None,
                                    },
                                ),
                            },
                        ),
                    ],
                    optional: false,
                    type_ann: None,
                },
            ),
            init: Some(
                Ident(
                    Ident {
                        span: 31..35,
                        name: "line",
                    },
                ),
            ),
            declare: false,
        },
    ],
}
