src/parser/snapshots/crochet__parser__tests__destructuring-9.snap
---
source: src/parser/mod.rs
expression: "parse(\"let foo = ({a, b}: {a: string, b: number}) => b\")"
---
Program {
    body: [
        VarDecl {
            span: 0..47,
            comments: None,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lambda(
                    Lambda {
                        span: 10..47,
                        params: [
                            Object(
                                ObjectPat {
                                    span: 11..41,
                                    props: [
                                        Assign(
                                            AssignPatProp {
                                                span: 12..13,
                                                key: Ident {
                                                    span: 12..13,
                                                    name: "a",
                                                },
                                                value: None,
                                            },
                                        ),
                                        Assign(
                                            AssignPatProp {
                                                span: 15..16,
                                                key: Ident {
                                                    span: 15..16,
                                                    name: "b",
                                                },
                                                value: None,
                                            },
                                        ),
                                    ],
                                    optional: false,
                                    type_ann: Some(
                                        Object(
                                            ObjectType {
                                                span: 19..41,
                                                props: [
                                                    TProp {
                                                        span: 20..29,
                                                        name: "a",
                                                        optional: false,
                                                        type_ann: Prim(
                                                            PrimType {
                                                                span: 23..29,
                                                                prim: Str,
                                                            },
                                                        ),
                                                    },
                                                    TProp {
                                                        span: 31..40,
                                                        name: "b",
                                                        optional: false,
                                                        type_ann: Prim(
                                                            PrimType {
                                                                span: 34..40,
                                                                prim: Num,
                                                            },
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ],
                        body: Ident(
                            Ident {
                                span: 46..47,
                                name: "b",
                            },
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            ),
            declare: false,
        },
    ],
}
